# neural_network

./: .gitignore  CMakeLists.txt
include/: Layer.h  NeuralNetwork.h  RELULayer.h  SIGMLayer.h  TANHLayer.h
src/: Layer.cpp  NeuralNetwork.cpp  RELULayer.cpp  SIGMLayer.cpp  TANHLayer.cpp  main.cpp
